--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
   "devDependencies": {
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "vite": "^2.6.14"
   }
 }
