--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "eslint": "^8.3.0",
     "prettier": "^2.4.1",
     "vite": "^2.6.14"
   }
