--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint src/**"
   },
   "devDependencies": {
     "eslint": "^8.3.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "prettier": "^2.4.1",
     "vite": "^2.6.14"
   }
