--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "postcss-preset-env": "^7.0.1",
     "prettier": "^2.4.1",
     "vite": "^2.6.14"
   }
