--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "lint": "eslint src/**"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
+    "jest": "^27.3.1",
     "postcss-preset-env": "^7.0.1",
     "prettier": "^2.4.1",
     "vite": "^2.6.14"
