--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lint": "eslint src/**"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
     "@types/jest": "^27.0.3",
+    "babel-jest": "^27.3.1",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
